2008-03-05  A. Walton  <awalton@svn.gnome.org>

	* programs/gvfs-cat.c (main):
	* programs/gvfs-copy.c (main):
	* programs/gvfs-info.c (main):
	* programs/gvfs-ls.c (main):
	* programs/gvfs-move.c (main):
	* programs/gvfs-open.c (main):
	* programs/gvfs-save.c (main):
	* programs/gvfs-tree.c (main):
	Error out if the user passes invalid flags and warn the user.
	Fixes bug #520086.

2008-03-06  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsftp.c:
	Allow setting unix mode on sftp (#520571)
	Patch from Carlos Garcia Campos

2008-03-06  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackenddav.c:
        (do_mount):
	Set display name for dav mount (#519588)

2008-03-06  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (do_move):
	fail if file exists

2008-03-06  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonmount.c:
        (foreign_volume_removed):
	Avoid deadlock when foreign volume is removed.

2008-03-05  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (dir_default_iter_process),
	(do_enumerate):
	don't list "." and ".." directories.

2008-03-05  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (do_create):
	fail if the file to be created already exists

2008-03-05  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (do_mount):
	set anonymous login to FALSE, no uninitialized variables please.
	* hal/ghalvolumemonitor.c: (adopt_orphan_mount):
	fix warning due to glib changes

2008-03-05  Bastien Nocera  <hadess@hadess.net>

	* INSTALL: Add mention of obex-data-server

2008-03-05  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (dir_default_get_root):
	the proper icon name is folder-remote, not remote-folder.
	really fixed #520189

2008-03-05  Bastien Nocera  <hadess@hadess.net>

	* configure.ac: Disable gphoto2 building when
	HAL is disabled as well (Closes: #519872)

2008-03-05  Bastien Nocera  <hadess@hadess.net>
